aks/vulnerables/juice-shop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
  namespace: vulnerables
spec:
  selector:
    app: vulnerables
    component: juice-shop
  ports:
    - port: 80
      targetPort: 3000
